--- a/styles/style.css
+++ b/styles/style.css
@@ -1,185 +1,185 @@
-html, body {
-    height: 100%;
-    min-width: 400px;
-    overflow-x: hidden;
-    font-family: Helvetica, Arial, sans-serif;
+html,
+body {
+  height: 100%;
+  min-width: 400px;
+  overflow-x: hidden;
+  font-family: Helvetica, Arial, sans-serif;
 }
 
 body {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #eceef1;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #eceef1;
 }
 
 img {
-    width: 1.5rem;
-    height: 1.5rem;
-    border-radius: 50%;
+  width: 1.5rem;
+  height: 1.5rem;
+  border-radius: 50%;
 }
 
 a {
-    text-decoration: none;
-    color: #0077C5;
+  text-decoration: none;
+  color: #0077c5;
 }
 
 button {
-    color: white;
-    border: none;
-    border-radius: 0.3rem;
-    background-color: #0077C5;
-    box-shadow: 0.5px 2px #757575;
+  color: white;
+  border: none;
+  border-radius: 0.3rem;
+  background-color: #0077c5;
+  box-shadow: 0.5px 2px #757575;
 }
 
 #sign-in {
-    width: 100%;
-    padding: 1rem;
-    height: fit-content;
-    display: flex;
-    justify-content: flex-end;
+  width: 100%;
+  padding: 1rem;
+  height: fit-content;
+  display: flex;
+  justify-content: flex-end;
 }
 
-#sign-in>div {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap: 0.5rem;
-    font-size: 0.75rem;
+#sign-in > div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 0.5rem;
+  font-size: 0.75rem;
 }
 
 #sign-in-button {
-    width: 6rem;
-    height: 2rem;
-    margin-right: 2rem;
-    margin-left: 1rem;
+  width: 6rem;
+  height: 2rem;
+  margin-right: 2rem;
+  margin-left: 1rem;
 }
 
 header {
-    width: 100%;
-    margin: 1rem 0rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
+  width: 100%;
+  margin: 1rem 0rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
-header>a {
-    font-size: 2em;
+header > a {
+  font-size: 2em;
 }
 
-#sign-in>div>p,
-header>a,
-li>a,
-form>p,
+#sign-in > div > p,
+header > a,
+li > a,
+form > p,
 #phone-label-rec,
 footer {
-    color: #8d9096;
+  color: #8d9096;
 }
 
 #nav-list {
-    display: flex;
-    flex-direction: row;
-    gap: 0.5rem;
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
 }
 
 #form-section {
-    width: 24rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    border: solid #c7c7c7 1px;
-    background-color: white;
+  width: 24rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border: solid #c7c7c7 1px;
+  background-color: white;
 }
 
 form {
-    flex: 1 0;
-    padding: 2rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    gap: 0.5rem;
+  flex: 1 0;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0.5rem;
 }
 
-form>* {
-    width: 100%;
-    text-align: center;
+form > * {
+  width: 100%;
+  text-align: center;
 }
 
 legend {
-    margin-bottom: 1rem;
-    color: #393A3D;
-    font-size: 24px;
-    font-weight: 400;
+  margin-bottom: 1rem;
+  color: #393a3d;
+  font-size: 24px;
+  font-weight: 400;
 }
 
 #sub-legend {
-    font-size: 14px;
-    font-weight: 300;
+  font-size: 14px;
+  font-weight: 300;
 }
 
 #sub-legend-anchor {
-    font-size: 14px;
+  font-size: 14px;
 }
 
-fieldset>ul>li {
-    margin: 2rem 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 0.5rem;
+fieldset > ul > li {
+  margin: 2rem 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 0.5rem;
 }
 
 label {
-    color: #404040;
-    font-size: 14px;
+  color: #404040;
+  font-size: 14px;
 }
 
 input {
-    width: 100%;
-    height: 2rem;
-    border-radius: 0.15rem;
-    border: 1px solid #C1C5C8;
+  width: 100%;
+  height: 2rem;
+  border-radius: 0.15rem;
+  border: 1px solid #c1c5c8;
 }
 
 #sms-warning {
-    margin-top: 0.5rem;
-    font-size: 10px;
-    color: #393A3D;
-    
+  margin-top: 0.5rem;
+  font-size: 10px;
+  color: #393a3d;
 }
 
 .dynamic-pw {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 0.5rem;
-    display: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 0.5rem;
+  display: none;
 }
 
 .pw-rules {
-    font-size: 0.8em;
-    color: red;
+  font-size: 0.8em;
+  color: red;
 }
 
 #account-terms {
-    font-size: 12px;
-    font-style: italic;
+  font-size: 12px;
+  font-style: italic;
 }
 
 #submit {
-    width: 100%;
-    height: 3rem;
-    font-size: 1rem;
+  width: 100%;
+  height: 3rem;
+  font-size: 1rem;
 }
 
 footer {
-    padding: 1rem;
-    font-size: 10px;
-    text-align: center;
-    background-color: #eceef1;
+  padding: 1rem;
+  font-size: 10px;
+  text-align: center;
+  background-color: #eceef1;
 }
